[phonebook][fix] -  position mobile, tablet and windows

--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -15,4 +15,9 @@
   }
 }
 @media screen and (min-width: 1280px) {
+  .appbar__item {
+    margin: 13px 300px 20px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid rgb(206, 205, 205);
+  }
 }
