--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -10,7 +10,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
   border-radius: 3px;
   background-color: rgb(247, 255, 255, 0.8);
   box-shadow: rgba(0, 0, 0, 0.4) 1px 2px 4px,
@@ -128,5 +127,36 @@
 
   .contact__icon {
     width: 20px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .contacts {
+    gap: 20px;
+    margin-top: 30px;
+  }
+  .contacts__item {
+    min-width: 150px;
+  }
+
+  .contacts__name {
+    font-size: 25px;
+    padding: 20px 15px 0 15px;
+  }
+
+  .contacts__number {
+    font-size: 22px;
+    font-weight: 200;
+    padding: 0px 15px 0 15px;
+  }
+
+  .contact__icon {
+    width: 20px;
+  }
+  .contacts__btn {
+    margin: 0;
+  }
+  .contacts__button {
+    padding: 5px 15px;
+    margin-bottom: 20px;
   }
 }
