--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -16,7 +16,6 @@
   box-shadow: rgba(0, 0, 0, 0.4) 1px 2px 4px,
     rgba(0, 0, 0, 0.3) 4px 2px 4px -10px, rgba(0, 0, 0, 0.2) -3px -2px 0px inset;
   color: rgb(136, 129, 129);
-  /* transition: all 100ms ease; */
   padding: 5px 14px;
   z-index: 1;
   animation: fade-in 600ms linear;
@@ -29,14 +28,34 @@
     opacity: 1;
   }
 }
-/* .filter__input:hover,
-.filter__input:focus {
-  outline: none;
-  color: black;
-  font-weight: 400;
-  border: none;
-  border-radius: 3px;
-  box-shadow: rgba(0, 0, 0, 0.4) 1px 1px 4px, rgba(0, 0, 0, 0.3) 3px 3px 4px,
-    rgba(0, 0, 0, 0.2) -5px -4px 0px inset;
-  transform: scale(1.02);
-} */
+
+@media screen and (min-width: 1280px) {
+  .filter {
+    display: flex;
+    margin: 30px 40px 0 0;
+  }
+
+  .filter__input {
+    min-width: 665px;
+    font-size: 25px;
+    font-weight: 200;
+    border: 1px solid rgb(206, 205, 205);
+    border-radius: 3px;
+    font-family: 'Dosis', sans-serif;
+    text-decoration: none;
+    color: rgb(136, 129, 129);
+    transition: all 100ms ease;
+    padding: 5px 14px;
+  }
+  .filter__input:hover,
+  .filter__input:focus {
+    outline: none;
+    color: black;
+    font-weight: 400;
+    border: none;
+    border-radius: 3px;
+    box-shadow: rgba(0, 0, 0, 0.4) 1px 1px 4px, rgba(0, 0, 0, 0.3) 3px 3px 4px,
+      rgba(0, 0, 0, 0.2) -5px -4px 0px inset;
+    transform: scale(1.03);
+  }
+}
